style.css
body {
  font-family: "open sans";
}

h1 {
  margin-bottom: 0.5em;
  font-size: 3.5em;
}

p {
  font-size: large;
}

.top-div {
  margin-top: 5em;
  background-color: #fee4ba;
  margin-top: 0%;
}

.row-div {
  padding: 4em 2em 2em 2em;
}

.button {
  margin-right: 3em;
  margin-bottom: 1em;
}

.button-text {
  padding-left: 0.5em;
  padding-right: 0.25em;
}

.image-div {
  padding-right: 0%;
}

.profile-image {
  border-radius: 50%;
  width: 90%;
  max-height: 23em;
  max-width: 23em;
  margin-top: 3em;
  margin-bottom: 3em;
}

.about-section {
  text-align: left;
}

.about-me-text {
  text-align: left;
  line-height: 2em;
}

.alternate-words:before {
  content: "reading 📖.";
  color: #ec9a29;
  animation: topToBottom 10s infinite 2s;
}

@keyframes topToBottom {
  0% {
    content: "hiking ⛰️.";
    color: #2e2bd4;
  }
  13% {
    content: "hiking ⛰️.";
    color: #2e2bd4;
  }
  26% {
    content: "hanging out with my dog 🐶.";
    color: #f2a15f;
  }
  39% {
    content: "ice skating ⛸️.";
    color: #ab72fc;
  }
  51% {
    content: "listening to good music 🎵.";
    color: #2bb5e8;
  }
  63% {
    content: "playing good music! 🎶.";
    color: #56a22a;
  }
  75% {
    content: "foraging 🍄.";
    color: #813f05;
  }
  87% {
    content: "photography 📸 .";
    color: #f271bc;
  }
  100% {
    content: "reading 📖.";
    color: #ec9a29;
  }
}

.hobbies-text {
  font-size: 1.25em;
}

h2 {
  text-align: center;
  font-size: 3em;
}

.purple-projects-div {
  background-color: rgb(194, 185, 211);
  text-align: left;
  margin-bottom: 3em;
}

.book-club-div {
  margin-bottom: 4em;
}

.final-div {
  margin-bottom: 5em;
}

.photoshop-para {
  font-size: 1.25em;
}

